<resources>
    <string name="app_name" translatable="false">KitchenAssistant</string>
    <string name="PERMISSION_NOT_GRANTED">Not permission is granted, cannot start detection!</string>
    <string name="CAMERA_FOUND">Camera found</string>
    <string name="CAMERA_NOT_FOUND">No camera available</string>
    <string name="DARK_AREA">Too dark here</string>
    <string name="MOTION_DETECTED">Motion detected</string>
    <string name="TXT_WELCOME_LOGIN">Log in</string>
    <string name="LOGIN_LOGO">Kitchen Assistant Login</string>
    <string name="login_btn_sign_in">sign in</string>
    <string name="login_btn_sign_up">sign up</string>
    <string name="login_text_field_email">Your email</string>
    <string name="login_text_field_password">Enter password</string>
    <string name="EMPTY_EMAIL_PASSWORD">Email or Password cannot be empty</string>
    <string name="EMAIL_OR_PASSWORD_INVALID">Email or Password is invalid</string>
    <string name="UNKNOWN_ERROR">Unknown error, please try again later</string>
    <string name="EMAIL_PASSWORD_INCORRECT">Email or Password is incorrect</string>
    <string name="USER_ALREADY_EXISTS">User already exists</string>
    <string name="EMPTY_EMAIL">Email cannot be empty</string>
    <string name="EMPTY_PASSWORD">Password cannot be empty</string>
    <string name="title_activity_application">Application</string>
    <string name="TOAST_LOGGED_IN_SUCCESSFULLY">Welcome! You logged in successfully</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Main activity layout strings -->
    <string name="MAIN_PROFILE_TAB_LABEL">Profile</string>
    <string name="MAIN_FAVORITE_TAB_LABEL">Favorite</string>
    <string name="MAIN_COMMUNITY_TAB_LABEL">Community</string>
    <string name="MAIN_HOME_TAB_LABEL">Home</string>
    <string name="SEARCH">Search</string>
    <string name="MENU_DRAWER">Menu drawer</string>
    <string name="SHOW_MORE">Show more</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="RECIPE_IMAGE">Recipe Image</string>
    <string name="CANCEL_BTN">Cancel</string>
    <string name="NEXT_BTN">Next</string>
    <string name="SET_NAME_INPUT_HELPER">Or we can call you %1$s?</string>
    <string name="SET_NAME_DIALOG_CONTENT">How do you want us to call you?</string>
    <string name="CANNOT_RATE_TWICE">You cannot rate the same recipe twice</string>
    <string name="STEP">Steps</string>
    <string name="INGREDIENTS">Ingredients</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_description">Description</string>
    <string name="add_recipe">Add recipe</string>
    <string name="UPLOAD_IMAGE">UPLOAD IMAGE</string>
    <string name="EMPTY_REQUIRE">Error! Require fields are empty</string>
    <string name="EMPTY_TITLE">Title of recipe cannot be empty</string>
    <string name="EMPTY_DESCRIPTION">Recipe description cannot be empty</string>
    <string name="ERROR_CREATING_RECIPE">Error creating recipe</string>
    <string name="OK_BTN_TEXT">OK</string>
    <string name="LAST_VIEW_RECIPES">Last viewed recipes</string>
    <string name="SEARCH_RESULTS">Search Results</string>
    <string name="EDIT">Edit</string>
    <string name="PROFILE_PIC">Profile images</string>
    <string name="login_text_field_age">Your Age</string>
    <string name="BTN_SAVE">Save</string>
    <string name="LOAD_USER_DATA_FAILED">Sorry! loading user data failed</string>
    <string name="LOADING_RECIPES">Loading last viewed recipes</string>
    <string name="NO_LAST_RECIPES">You didn\'t watch any recipes, go community and watch some!</string>
    <string name="CREATE_RECIPE_2_INSTRUCTIONS">Instructions</string>
    <string name="BTN_ADD">Add</string>
    <string name="CREATE_RECIPE_2_INGREDIENTS">Ingredients</string>
    <string name="BTN_FINISH">Finish</string>
    <string name="TAGS">Tags</string>
    <string name="ADD_NEW_INSTRUCTION">Add new instruction</string>
    <string name="dialog_instruction_description_hint">Description *</string>
    <string name="dialog_instruction_time_hint">Time(min) *</string>
    <string name="dialog_instruction_special_notes_hint">Special Notes</string>
    <string name="dialog_ingredients_title_hint">Title *</string>
    <string name="dialog_ingredients_description_hint">Description</string>
    <string name="dialog_ingredients_amount_hint">Amount *</string>
    <string name="dialog_ingredients_unit_hint">Units</string>
    <string name="ADD_NEW_INGREDIENT">Add new ingredient</string>
    <string name="INVALID_UNIT_SELECTED">Please select unit from list</string>
    <string name="POSTFIX_MINUTES">min</string>
    <string name="CREATE_RECIPE_FAILED">Sorry, but the creation of recipe has been failed!</string>
    <string name="COMMUNITY_RECIPES">Community Recipes</string>
    <string name="PROFILE_UPDATE_FAILED">Update profile failed</string>
    <string name="UPDATE_PROFILE_PIC">Do you want to update your profile picture?</string>
    <string name="PROFILE_UPDATE_SUCCESS">Profile updated successfully</string>
    <string name="HELLO_MASSAGE" translatable="false">Hello</string>
    <string name="nextBtn" translatable="false">NEXT</string>
    <string name="textFont" translatable="false">cursive</string>
    <string name="PROFILE_WELCOME">Hi!</string>
    <string name="BTN_LOGOUT">Logout</string>
    <string name="LOGOUT_TITLE_DIALOG">Are you sure you want to logout?</string>
    <string name="LOGOUT_FAILED">Sorry! but logout proccess failed, please try again</string>
    <string name="LOADING_COMMUNITY_RECIPES">Loading community recipes</string>
    <string name="LOADING_FAVORITE_RECIPES">Loading favorite recipes</string>
    <string name="LOADING_MY_RECIPES">Loading your recipes</string>
    <string name="HOME_RECIPES" />
    <string name="SEARCH_RESULTS_TITLE">Search results</string>
    <string name="FAVORITES_NO_RECIPES">it appears that you haven\'t like any recipe, you can double click on any recipe to added to your favorite.</string>
    <string name="LOGO">Kitchen Assistant</string>
    <string name="BACK_BTN">Back</string>
    <string name="EDIT_RECIPE_FAILED">Edit recipe failed</string>
    <string name="SEARCH_RESULTS_TITLE_FOR">Search results for %s</string>
</resources>
