<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_recipe_step_1_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_recipe_step_1_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_title"
            app:boxStrokeWidth="1px"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_recipe_step_1_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_description"
            app:boxStrokeWidth="1px"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/create_recipe_step_1_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/UPLOAD_IMAGE"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/create_recipe_step_1_load_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UPLOAD_IMAGE" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/create_recipe_step_1_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/NEXT_BTN"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>