<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_activity_main_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/main_activity_recipe_view_frame"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

        </FrameLayout>

        <com.mancj.materialsearchbar.MaterialSearchBar
            android:id="@+id/searchBar"
            style="@style/MaterialSearchBarLight.custom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:mt_hint=""
            app:mt_maxSuggestionsCount="10"
            app:mt_speechMode="true">

        </com.mancj.materialsearchbar.MaterialSearchBar>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="205dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="361dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="311dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="677dp" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/main_activity_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/LOGIN_LOGO"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/application_main_logo" />


        <ImageView
            android:id="@+id/micBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:clickable="true"
            android:contentDescription="@string/MENU_DRAWER"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_mic_none_24" />

        <ImageView
            android:id="@+id/main_search_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:clickable="true"
            android:contentDescription="@string/SEARCH"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/search_icon" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/main_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/main_tab_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/home"
                android:text="@string/MAIN_HOME_TAB_LABEL" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/main_tab_community"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/community"
                android:text="@string/MAIN_COMMUNITY_TAB_LABEL" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/main_tab_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/favorite"
                android:text="@string/MAIN_FAVORITE_TAB_LABEL" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/main_tab_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/profile"
                android:text="@string/MAIN_PROFILE_TAB_LABEL" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/main_activity_framelayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_toolbar_layout">


        </androidx.viewpager.widget.ViewPager>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/add_recipe"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.Button"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>