<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingTop="8dp"
    android:paddingRight="15dp"
    android:paddingBottom="8dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="280dp" />

    <TextView
        android:id="@+id/create_recipe_step_2_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="RECIPE TITLE" />

    <TextView
        android:id="@+id/create_recipe_step_2_ingredients_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/CREATE_RECIPE_2_INGREDIENTS"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/create_recipe_step_2_add_ingredients"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_recipe_step_2_title" />

    <Button
        android:id="@+id/create_recipe_step_2_add_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BTN_ADD"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/create_recipe_step_2_ingredients_title"
        app:layout_constraintTop_toBottomOf="@+id/create_recipe_step_2_title" />

    <ListView
        android:id="@+id/create_recipe_step_2_ingredients_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_recipe_step_2_add_ingredients">

    </ListView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="225dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="450dp" />

    <ListView
        android:id="@+id/create_recipe_step_2_instructions_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_recipe_step_2_add_instructions">

    </ListView>

    <TextView
        android:id="@+id/create_recipe_step_2_instructions_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:text="@string/CREATE_RECIPE_2_INSTRUCTIONS"
        app:layout_constraintBottom_toBottomOf="@+id/create_recipe_step_2_add_instructions"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline19" />

    <TextView
        android:id="@+id/create_recipe_step_2_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/TAGS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline21" />

    <Button
        android:id="@+id/create_recipe_step_2_add_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="150"
        android:text="@string/BTN_ADD"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/create_recipe_step_2_instructions_title"
        app:layout_constraintTop_toBottomOf="@+id/guideline19" />

    <Button
        android:id="@+id/create_recipe_step_2_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/BTN_FINISH"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/create_recipe_step_2_add_instructions" />

    <com.pchmn.materialchips.ChipsInput
        android:id="@+id/create_recipe_step_2_chip_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/create_recipe_step_2_finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_recipe_step_2_tags">
    </com.pchmn.materialchips.ChipsInput>

</androidx.constraintlayout.widget.ConstraintLayout>